# docker-develop

./: .gitignore  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docker_develop/: __main__.py
